adds preprocessing steps and usage of gensim library preprocessing. also adds origin sentence to output and removes 1 character entities and quotes from output.

--- a/ner_flair.ipynb
+++ b/ner_flair.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ff096c7c-98a9-4a35-a370-0937d79f9027",
    "metadata": {
     "colab": {
@@ -11,27 +11,7 @@
     "id": "ff096c7c-98a9-4a35-a370-0937d79f9027",
     "outputId": "da0661ba-65d4-4e20-8435-7508842723a2"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOStream.flush timed out\n",
-      "/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/flair/named-entities/venv/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/flair/named-entities/venv/lib/python3.9/site-packages/huggingface_hub/file_download.py:560: FutureWarning: `cached_download` is the legacy way to download files from the HF hub, please consider upgrading to `hf_hub_download`\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-06-28 10:19:16,940 loading file /Users/kodymoodley/.flair/models/ner-english-ontonotes-large/2da6c2cdd76e59113033adf670340bfd820f0301ae2e39204d67ba2dc276cc28.ec1bdb304b6c66111532c3b1fc6e522460ae73f1901848a4d0362cdf9760edb1\n",
-      "2022-06-28 10:19:44,470 SequenceTagger predicts: Dictionary with 76 tags: <unk>, O, B-CARDINAL, E-CARDINAL, S-PERSON, S-CARDINAL, S-PRODUCT, B-PRODUCT, I-PRODUCT, E-PRODUCT, B-WORK_OF_ART, I-WORK_OF_ART, E-WORK_OF_ART, B-PERSON, E-PERSON, S-GPE, B-DATE, I-DATE, E-DATE, S-ORDINAL, S-LANGUAGE, I-PERSON, S-EVENT, S-DATE, B-QUANTITY, E-QUANTITY, S-TIME, B-TIME, I-TIME, E-TIME, B-GPE, E-GPE, S-ORG, I-GPE, S-NORP, B-FAC, I-FAC, E-FAC, B-NORP, E-NORP, S-PERCENT, B-ORG, E-ORG, B-LANGUAGE, E-LANGUAGE, I-CARDINAL, I-ORG, S-WORK_OF_ART, I-QUANTITY, B-MONEY\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from flair.models import SequenceTagger\n",
     "from flair.data import Sentence\n",
@@ -59,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0cdc4deb-295f-4102-9e07-be484b90a62f",
    "metadata": {
     "id": "0cdc4deb-295f-4102-9e07-be484b90a62f"
@@ -67,13 +47,59 @@
    "outputs": [],
    "source": [
     "# Get data (full texts of documents including acknowledgements, foreword, executive summary and body)\n",
-    "f = open('data.json')\n",
+    "f = open('data.json', encoding='utf-8')\n",
     "data = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "c895d1a1-770e-4325-9fe6-a995d60b4b06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preprocessing\n",
+    "import re\n",
+    "import gensim\n",
+    "from gensim.parsing.preprocessing import preprocess_string, strip_tags, strip_multiple_whitespaces\n",
+    "\n",
+    "def preprocess(text):\n",
+    "    # remove URLs\n",
+    "    text = re.sub('http://\\S+|https://\\S+', '', text)\n",
+    "    text = re.sub('http[s]?://\\S+', '', text)\n",
+    "    text = re.sub(r'http\\S+', '', text)\n",
+    "    text = re.sub('^(http:\\/\\/www\\.|https:\\/\\/www\\.|http:\\/\\/|https:\\/\\/)?[a-z0-9]+([\\-\\.]{1}[a-z0-9]+)*\\.[a-z]{2,5}(:[0-9]{1,5})?(\\/.*)?$', '', text)\n",
+    "    \n",
+    "    # remove HTML / XML-like tags in text and multiple whitespaces\n",
+    "    CUSTOM_FILTERS = [strip_tags, strip_multiple_whitespaces]\n",
+    "    text_tokens = preprocess_string(text, CUSTOM_FILTERS)\n",
+    "    text = ' '.join(text_tokens)\n",
+    "    \n",
+    "    # remove niche irrelevant characters\n",
+    "    irrelevant_tokens = ['et', 'al.', 'x', 'pdf', 'yes', 'abbrev', \n",
+    "                            'page', 'pp', 'p', 'er', 'doi', 'can', 'b', 'c', 'd', 'e',\n",
+    "                            'f', 'g', 'h', 'j', 'k', 'l', 'm', 'n', 'o', 'q', 'r', 's',\n",
+    "                            't', 'u', 'v', 'w', 'y', 'z']\n",
+    "    tokens = text.split()\n",
+    "    tokens_without_sw = [word for word in tokens if not word in irrelevant_tokens]\n",
+    "    text = ' '.join(tokens_without_sw)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da4f1646-a516-4104-80d7-4e91de534854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key in data:\n",
+    "    data[key] = preprocess(data[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b7647a06-b78c-45a5-91a0-5afceb3b327f",
    "metadata": {
     "id": "b7647a06-b78c-45a5-91a0-5afceb3b327f"
@@ -89,9 +115,10 @@
     "    for sentence in sentences:        \n",
     "        for entity in sentence.get_spans('ner'):\n",
     "            if (entity.get_label(\"ner\").value in relevant_ent_types):\n",
-    "                results.append((entity.text, entity.get_label(\"ner\").value, docid))\n",
+    "                if (len(entity.text) > 1): # one character entities disregarded\n",
+    "                    results.append((entity.text.replace('\"', ''), entity.get_label(\"ner\").value, sentence, docid))\n",
     "                              \n",
-    "    return list(set(results))\n",
+    "    return results\n",
     "\n",
     "# Write tagging results to CSV file\n",
     "def write_results_to_file(results, file):\n",
@@ -100,14 +127,14 @@
     "        with open(file, 'a+', newline='') as f:\n",
     "            writer = csv.writer(f)\n",
     "            for item in results:\n",
-    "                writer.writerow([str(item[0]), str(item[1]), str(item[2]), 'flair - FLERT and XML embeddings'])\n",
+    "                writer.writerow([str(item[0]), str(item[1]), str(item[2]), str(item[3]), 'flair - FLERT and XML embeddings'])\n",
     "    else:\n",
     "        # create file from scratch\n",
     "        with open(file, 'w') as f:\n",
     "            writer = csv.writer(f)\n",
-    "            writer.writerow(['entity', 'entity_type', 'docid', 'model'])\n",
+    "            writer.writerow(['entity', 'entity_type', 'sentence', 'docid', 'model'])\n",
     "            for item in results:\n",
-    "                writer.writerow([str(item[0]), str(item[1]), str(item[2]), 'flair - FLERT and XML embeddings'])"
+    "                writer.writerow([str(item[0]), str(item[1]), str(item[2]), str(item[3]), 'flair - FLERT and XML embeddings'])"
    ]
   },
   {
@@ -121,19 +148,7 @@
     "id": "f7dfd99a-1cb8-4adb-80b3-847fd5385b4e",
     "outputId": "4a573403-ebbd-4f3e-936d-76f4229b3f4b"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Started entire run at:- 2022-06-28 10:21:20.585983\n",
-      "---\n",
-      "\n",
-      "Started processing Doc (1 / 55) at:- 2022-06-28 10:21:20.587040\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the NER tagging on each document in the corpus\n",
     "import datetime;\n",
