--- a/ner_flair.ipynb
+++ b/ner_flair.ipynb
@@ -9,7 +9,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "ff096c7c-98a9-4a35-a370-0937d79f9027",
-    "outputId": "da0661ba-65d4-4e20-8435-7508842723a2"
+    "outputId": "d49eef11-3562-443a-c8cc-e56c398c32e2"
    },
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "import os.path\n",
     "import json\n",
     "\n",
-    "# Relevant entity types:\n",
+    "# relevant entity types:\n",
     "# ----------------------\n",
     "# FAC\tbuilding name\n",
     "# GPE\tgeo-political entity\n",
@@ -46,23 +46,29 @@
    },
    "outputs": [],
    "source": [
-    "# Get data (full texts of documents including acknowledgements, foreword, executive summary and body)\n",
-    "f = open('data.json', encoding='utf-8')\n",
-    "data = json.load(f)"
+    "# get data (full texts of documents including acknowledgements, foreword, executive summary and body)\n",
+    "f = open('data.json')\n",
+    "data = json.load(f)\n",
+    "\n",
+    "# get data (the structured data which Malte processed into lines with metadata)\n",
+    "sf = open('studies_on_water_scraped.json')\n",
+    "malte_data = json.load(sf)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c895d1a1-770e-4325-9fe6-a995d60b4b06",
-   "metadata": {},
+   "id": "TPha0WaPLcfU",
+   "metadata": {
+    "id": "TPha0WaPLcfU"
+   },
    "outputs": [],
    "source": [
-    "# Preprocessing\n",
     "import re\n",
     "import gensim\n",
     "from gensim.parsing.preprocessing import preprocess_string, strip_tags, strip_multiple_whitespaces\n",
     "\n",
+    "# define preprocessing steps\n",
     "def preprocess(text):\n",
     "    # remove URLs\n",
     "    text = re.sub('http://\\S+|https://\\S+', '', text)\n",
@@ -73,15 +79,14 @@
     "    # remove HTML / XML-like tags in text and multiple whitespaces\n",
     "    CUSTOM_FILTERS = [strip_tags, strip_multiple_whitespaces]\n",
     "    text_tokens = preprocess_string(text, CUSTOM_FILTERS)\n",
-    "    text = ' '.join(text_tokens)\n",
     "    \n",
     "    # remove niche irrelevant characters\n",
-    "    irrelevant_tokens = ['et', 'al.', 'x', 'pdf', 'yes', 'abbrev', \n",
+    "    irrelevant_tokens = ['et', 'al.', 'x', 'pdf', 'yes', 'abbrev','fe',\n",
     "                            'page', 'pp', 'p', 'er', 'doi', 'can', 'b', 'c', 'd', 'e',\n",
     "                            'f', 'g', 'h', 'j', 'k', 'l', 'm', 'n', 'o', 'q', 'r', 's',\n",
-    "                            't', 'u', 'v', 'w', 'y', 'z']\n",
-    "    tokens = text.split()\n",
-    "    tokens_without_sw = [word for word in tokens if not word in irrelevant_tokens]\n",
+    "                            't', 'u', 'v', 'w', 'y', 'z','www', 'com', 'org', 'de', 'dx', 'th', 'ii', 'le']\n",
+    "\n",
+    "    tokens_without_sw = [word.strip() for word in text_tokens if not word.strip() in irrelevant_tokens]\n",
     "    text = ' '.join(tokens_without_sw)\n",
     "    return text"
    ]
@@ -89,12 +94,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da4f1646-a516-4104-80d7-4e91de534854",
-   "metadata": {},
+   "id": "7TPDXqwSLiOp",
+   "metadata": {
+    "id": "7TPDXqwSLiOp"
+   },
    "outputs": [],
    "source": [
+    "# preprocess data\n",
     "for key in data:\n",
     "    data[key] = preprocess(data[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "-QmKcjk4MZ2h",
+   "metadata": {
+    "id": "-QmKcjk4MZ2h"
+   },
+   "outputs": [],
+   "source": [
+    "# define function to lookup correct ID for document in studies_on_water_scraped.json\n",
+    "# before this, I was using the INDEX of the document in the JSON array of this file as its ID.\n",
+    "def lookup_correct_docid(old_key):\n",
+    "    global malte_data\n",
+    "    return malte_data[int(old_key)]['meta']['id']"
    ]
   },
   {
@@ -106,35 +130,43 @@
    },
    "outputs": [],
    "source": [
-    "# Do NER tagging on a given document\n",
+    "# function to split sentence list into chunks for batch processing by GPU\n",
+    "def split(list_a, chunk_size):\n",
+    "    for i in range(0, len(list_a), chunk_size):\n",
+    "        yield list_a[i:i + chunk_size]\n",
+    "\n",
+    "# do NER tagging on a given document\n",
     "def flair_ner(document, model, docid):\n",
     "    results = []\n",
     "    splitter = SegtokSentenceSplitter()\n",
     "    sentences = splitter.split(document)\n",
-    "    model.predict(sentences)\n",
-    "    for sentence in sentences:        \n",
-    "        for entity in sentence.get_spans('ner'):\n",
-    "            if (entity.get_label(\"ner\").value in relevant_ent_types):\n",
-    "                if (len(entity.text) > 1): # one character entities disregarded\n",
-    "                    results.append((entity.text.replace('\"', ''), entity.get_label(\"ner\").value, sentence, docid))\n",
+    "    batches = split(sentences, 20)\n",
+    "\n",
+    "    for batch in batches:\n",
+    "        model.predict(batch)\n",
+    "        for sentence in batch:        \n",
+    "            for entity in sentence.get_spans('ner'):\n",
+    "                if (entity.get_label(\"ner\").value in relevant_ent_types):\n",
+    "                    if (len(entity.text) > 1): # one character entities disregarded\n",
+    "                        results.append((entity.text.replace('\"', ''), entity.get_label(\"ner\").value, sentence.to_plain_string(), str(entity.start_position) + \":\" + str(entity.end_position), docid))\n",
     "                              \n",
     "    return results\n",
     "\n",
-    "# Write tagging results to CSV file\n",
+    "# write tagging results to CSV file\n",
     "def write_results_to_file(results, file):\n",
     "    if os.path.exists(file):\n",
     "        # append\n",
     "        with open(file, 'a+', newline='') as f:\n",
     "            writer = csv.writer(f)\n",
     "            for item in results:\n",
-    "                writer.writerow([str(item[0]), str(item[1]), str(item[2]), str(item[3]), 'flair - FLERT and XML embeddings'])\n",
+    "                writer.writerow([str(item[0]), str(item[1]), str(item[2]), str(item[3]), str(item[4]), 'flair - FLERT and XML embeddings'])\n",
     "    else:\n",
     "        # create file from scratch\n",
     "        with open(file, 'w') as f:\n",
     "            writer = csv.writer(f)\n",
-    "            writer.writerow(['entity', 'entity_type', 'sentence', 'docid', 'model'])\n",
+    "            writer.writerow(['entity', 'entity_type', 'sentence', 'span', 'docid', 'model'])\n",
     "            for item in results:\n",
-    "                writer.writerow([str(item[0]), str(item[1]), str(item[2]), str(item[3]), 'flair - FLERT and XML embeddings'])"
+    "                writer.writerow([str(item[0]), str(item[1]), str(item[2]), str(item[3]), str(item[4]), 'flair - FLERT and XML embeddings'])"
    ]
   },
   {
@@ -146,11 +178,11 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "f7dfd99a-1cb8-4adb-80b3-847fd5385b4e",
-    "outputId": "4a573403-ebbd-4f3e-936d-76f4229b3f4b"
+    "outputId": "e324561d-372b-45c0-a5d3-9fffedce8ade"
    },
    "outputs": [],
    "source": [
-    "# Run the NER tagging on each document in the corpus\n",
+    "# run the NER tagging on each document in the corpus\n",
     "import datetime;\n",
     "ct = datetime.datetime.now()\n",
     "print()\n",
@@ -158,29 +190,19 @@
     "print(\"---\")\n",
     "print()\n",
     "\n",
-    "index = 1\n",
     "for key in data:\n",
     "    ct = datetime.datetime.now()\n",
-    "    print(\"Started processing Doc (\" + str(index) + \" / \" + \"55) at:-\", ct)\n",
-    "    ner_results = flair_ner(data[key], flair_18class, key)\n",
+    "    print(\"Started processing Doc (\" + str(key) + \"-\" + str(lookup_correct_docid(key)) + \" / \" + \"55) at:-\", ct)\n",
+    "    ner_results = flair_ner(data[key], flair_18class, lookup_correct_docid(key))\n",
     "    write_results_to_file(ner_results, 'master-ner-results.csv')\n",
     "    ct = datetime.datetime.now()\n",
-    "    print(\"Finished processing Doc (\" + str(index) + \" / \" + \"55) at:-\", ct)\n",
-    "    index += 1\n",
+    "    print(\"Finished processing Doc (\" + str(key) + \"-\" + str(lookup_correct_docid(key)) + \" / \" + \"55) at:-\", ct)\n",
     "\n",
     "print()\n",
     "ct = datetime.datetime.now()\n",
     "print(\"---\")\n",
     "print(\"Finished entire run at:-\", ct)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8b8a3a1-f53e-4659-9fe9-0a03a379f588",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -188,7 +210,8 @@
   "colab": {
    "collapsed_sections": [],
    "name": "ner-flair.ipynb",
-   "provenance": []
+   "provenance": [],
+   "toc_visible": true
   },
   "gpuClass": "standard",
   "kernelspec": {
@@ -206,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
