adds ner exploring, clustering and word2vec embeddings notebooks

--- a/preprocess_ngram_named_entities.ipynb
+++ b/preprocess_ngram_named_entities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "23902e8a-b486-41ae-bdd9-1705f0e273fc",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "4a4810b6-2b8e-4f22-8097-181608614938",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "b70858d4-91a7-4858-92e2-9e72c47fefb4",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "9cdfef9c-1509-4661-a5ac-79703a10c71b",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "2303fc71-662b-4dc0-a801-80014cf37ee7",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "dc350b7d-46b4-49c5-b2be-078e139e577d",
    "metadata": {},
    "outputs": [],
@@ -104,15 +104,17 @@
     "    return text\n",
     "\n",
     "def process(datafr, doctext, docid):\n",
+    "    global entity_dict\n",
     "    # print(docid)\n",
     "    # first filter the rows pertaining to the given docid\n",
     "    docid_datafr = datafr[datafr['docid'] == docid]\n",
     "    # then filter only for organisations and persons\n",
-    "    docid_org_per_datafr = docid_datafr[docid_datafr['entity_type'].isin(['ORG', 'PERSON'])]\n",
+    "    docid_org_per_datafr = docid_datafr[docid_datafr['entity_type'].isin(['ORG', 'PERSON', 'NORP', 'LOC', 'FAC', 'GPE'])]\n",
+    "    \n",
     "    # print(\"before: \", len(docid_org_per_datafr))\n",
     "    # old_count = len(docid_org_per_datafr)\n",
-    "    v = docid_org_per_datafr[['entity']]\n",
-    "    docid_org_per_datafr = docid_org_per_datafr[v.replace(v.stack().value_counts()).gt(2).all(1)]\n",
+    "    # v = docid_org_per_datafr[['entity']]\n",
+    "    # docid_org_per_datafr = docid_org_per_datafr[v.replace(v.stack().value_counts()).gt(2).all(1)]\n",
     "    # print(\"after: \", len(docid_org_per_datafr))\n",
     "    # new_count = len(docid_org_per_datafr)\n",
     "    # loop through each entity mention (row) in the dataframe\n",
@@ -122,13 +124,21 @@
     "    for sentence in unique_sentences:\n",
     "        curr_sent_df = docid_org_per_datafr[docid_org_per_datafr['sentence'] == sentence]\n",
     "        curr_sent_entities = curr_sent_df['entity'].tolist()\n",
+    "        # if 'rockefeller' in sentence:\n",
+    "        #     print()\n",
+    "        #     print()\n",
+    "        #     print(curr_sent_entities)\n",
+    "        #     print()\n",
+    "        #     print()\n",
     "        replace_patterns = {}\n",
     "        for entity in curr_sent_entities:\n",
-    "            named_entity_tokens = entity.strip().replace('\"', '').replace(\"'\", '').replace(\",\",'').split()\n",
-    "            if (len(named_entity_tokens) > 1):\n",
-    "                # form single token from multiple ones\n",
-    "                single_token_entity = '_'.join(named_entity_tokens)\n",
-    "                replace_patterns[entity] = single_token_entity\n",
+    "            if isinstance(entity, str):\n",
+    "                named_entity_tokens = entity.strip().replace('\"', '').replace(\"'\", '').replace(\",\",'').replace('’','').replace('‘','').replace('“','').replace('”','').split()\n",
+    "                if (len(named_entity_tokens) > 1):\n",
+    "                    # form single token from multiple ones\n",
+    "                    single_token_entity = '_'.join(named_entity_tokens)\n",
+    "                    replace_patterns[entity] = single_token_entity\n",
+    "                    entity_dict[entity] = single_token_entity\n",
     "                \n",
     "        new_sentence = replace_all(sentence, replace_patterns)\n",
     "        doctext = doctext.replace(sentence, new_sentence)\n",
@@ -138,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "5a3d3237-eb86-428b-8082-4150317bf553",
    "metadata": {},
    "outputs": [
@@ -147,122 +157,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Started entire run at:- 2022-07-11 20:08:51.597747\n",
+      "Started entire run at:- 2022-07-12 08:35:34.616352\n",
       "---\n",
       "\n",
-      "Started processing Doc (48-50 / 55) at:- 2022-07-11 20:08:51.599351\n",
-      "Finished processing Doc (48-50 / 55) at:- 2022-07-11 20:08:51.775210\n",
-      "Started processing Doc (0-0 / 55) at:- 2022-07-11 20:08:51.775239\n",
-      "Finished processing Doc (0-0 / 55) at:- 2022-07-11 20:08:51.815897\n",
-      "Started processing Doc (26-28 / 55) at:- 2022-07-11 20:08:51.816010\n",
-      "Finished processing Doc (26-28 / 55) at:- 2022-07-11 20:08:51.953708\n",
-      "Started processing Doc (42-44 / 55) at:- 2022-07-11 20:08:51.953738\n",
-      "Finished processing Doc (42-44 / 55) at:- 2022-07-11 20:08:52.173708\n",
-      "Started processing Doc (49-51 / 55) at:- 2022-07-11 20:08:52.173729\n",
-      "Finished processing Doc (49-51 / 55) at:- 2022-07-11 20:08:52.233480\n",
-      "Started processing Doc (11-12 / 55) at:- 2022-07-11 20:08:52.233566\n",
-      "Finished processing Doc (11-12 / 55) at:- 2022-07-11 20:08:52.320783\n",
-      "Started processing Doc (23-25 / 55) at:- 2022-07-11 20:08:52.320799\n",
-      "Finished processing Doc (23-25 / 55) at:- 2022-07-11 20:08:52.368043\n",
-      "Started processing Doc (1-1 / 55) at:- 2022-07-11 20:08:52.368056\n",
-      "Finished processing Doc (1-1 / 55) at:- 2022-07-11 20:08:52.413911\n",
-      "Started processing Doc (20-22 / 55) at:- 2022-07-11 20:08:52.413924\n",
-      "Finished processing Doc (20-22 / 55) at:- 2022-07-11 20:08:52.470286\n",
-      "Started processing Doc (10-11 / 55) at:- 2022-07-11 20:08:52.470384\n",
-      "Finished processing Doc (10-11 / 55) at:- 2022-07-11 20:08:52.606919\n",
-      "Started processing Doc (7-7 / 55) at:- 2022-07-11 20:08:52.606942\n",
-      "Finished processing Doc (7-7 / 55) at:- 2022-07-11 20:08:52.809786\n",
-      "Started processing Doc (33-35 / 55) at:- 2022-07-11 20:08:52.809806\n",
-      "Finished processing Doc (33-35 / 55) at:- 2022-07-11 20:08:52.842913\n",
-      "Started processing Doc (39-41 / 55) at:- 2022-07-11 20:08:52.843003\n",
-      "Finished processing Doc (39-41 / 55) at:- 2022-07-11 20:08:52.877946\n",
-      "Started processing Doc (43-45 / 55) at:- 2022-07-11 20:08:52.877962\n",
-      "Finished processing Doc (43-45 / 55) at:- 2022-07-11 20:08:52.916020\n",
-      "Started processing Doc (14-15 / 55) at:- 2022-07-11 20:08:52.916034\n",
-      "Finished processing Doc (14-15 / 55) at:- 2022-07-11 20:08:52.972361\n",
-      "Started processing Doc (47-49 / 55) at:- 2022-07-11 20:08:52.972375\n",
-      "Finished processing Doc (47-49 / 55) at:- 2022-07-11 20:08:53.107607\n",
-      "Started processing Doc (12-13 / 55) at:- 2022-07-11 20:08:53.107623\n",
-      "Finished processing Doc (12-13 / 55) at:- 2022-07-11 20:08:53.299658\n",
-      "Started processing Doc (2-2 / 55) at:- 2022-07-11 20:08:53.299749\n",
-      "Finished processing Doc (2-2 / 55) at:- 2022-07-11 20:08:53.440006\n",
-      "Started processing Doc (34-36 / 55) at:- 2022-07-11 20:08:53.440023\n",
-      "Finished processing Doc (34-36 / 55) at:- 2022-07-11 20:08:53.520606\n",
-      "Started processing Doc (37-39 / 55) at:- 2022-07-11 20:08:53.520653\n",
-      "Finished processing Doc (37-39 / 55) at:- 2022-07-11 20:08:53.839984\n",
-      "Started processing Doc (31-33 / 55) at:- 2022-07-11 20:08:53.840011\n",
-      "Finished processing Doc (31-33 / 55) at:- 2022-07-11 20:08:53.896629\n",
-      "Started processing Doc (15-16 / 55) at:- 2022-07-11 20:08:53.896715\n",
-      "Finished processing Doc (15-16 / 55) at:- 2022-07-11 20:08:54.021976\n",
-      "Started processing Doc (4-4 / 55) at:- 2022-07-11 20:08:54.022007\n",
-      "Finished processing Doc (4-4 / 55) at:- 2022-07-11 20:08:54.092344\n",
-      "Started processing Doc (24-26 / 55) at:- 2022-07-11 20:08:54.092383\n",
-      "Finished processing Doc (24-26 / 55) at:- 2022-07-11 20:08:54.700696\n",
-      "Started processing Doc (9-10 / 55) at:- 2022-07-11 20:08:54.700797\n",
-      "Finished processing Doc (9-10 / 55) at:- 2022-07-11 20:08:54.960337\n",
-      "Started processing Doc (27-29 / 55) at:- 2022-07-11 20:08:54.960361\n",
-      "Finished processing Doc (27-29 / 55) at:- 2022-07-11 20:08:54.993767\n",
-      "Started processing Doc (3-3 / 55) at:- 2022-07-11 20:08:54.993867\n",
-      "Finished processing Doc (3-3 / 55) at:- 2022-07-11 20:08:55.070241\n",
-      "Started processing Doc (21-23 / 55) at:- 2022-07-11 20:08:55.070259\n",
-      "Finished processing Doc (21-23 / 55) at:- 2022-07-11 20:08:55.140269\n",
-      "Started processing Doc (44-46 / 55) at:- 2022-07-11 20:08:55.140283\n",
-      "Finished processing Doc (44-46 / 55) at:- 2022-07-11 20:08:55.428320\n",
-      "Started processing Doc (51-53 / 55) at:- 2022-07-11 20:08:55.428413\n",
-      "Finished processing Doc (51-53 / 55) at:- 2022-07-11 20:08:55.613682\n",
-      "Started processing Doc (6-6 / 55) at:- 2022-07-11 20:08:55.613717\n",
-      "Finished processing Doc (6-6 / 55) at:- 2022-07-11 20:08:55.665496\n",
-      "Started processing Doc (35-37 / 55) at:- 2022-07-11 20:08:55.665626\n",
-      "Finished processing Doc (35-37 / 55) at:- 2022-07-11 20:08:55.832555\n",
-      "Started processing Doc (54-20 / 55) at:- 2022-07-11 20:08:55.832578\n",
-      "Finished processing Doc (54-20 / 55) at:- 2022-07-11 20:08:55.933499\n",
-      "Started processing Doc (22-24 / 55) at:- 2022-07-11 20:08:55.933518\n",
-      "Finished processing Doc (22-24 / 55) at:- 2022-07-11 20:08:55.991958\n",
-      "Started processing Doc (8-9 / 55) at:- 2022-07-11 20:08:55.992048\n",
-      "Finished processing Doc (8-9 / 55) at:- 2022-07-11 20:08:56.081933\n",
-      "Started processing Doc (29-31 / 55) at:- 2022-07-11 20:08:56.081950\n",
-      "Finished processing Doc (29-31 / 55) at:- 2022-07-11 20:08:56.127074\n",
-      "Started processing Doc (17-18 / 55) at:- 2022-07-11 20:08:56.127088\n",
-      "Finished processing Doc (17-18 / 55) at:- 2022-07-11 20:08:56.204519\n",
-      "Started processing Doc (30-32 / 55) at:- 2022-07-11 20:08:56.204633\n",
-      "Finished processing Doc (30-32 / 55) at:- 2022-07-11 20:08:56.348046\n",
-      "Started processing Doc (13-14 / 55) at:- 2022-07-11 20:08:56.348075\n",
-      "Finished processing Doc (13-14 / 55) at:- 2022-07-11 20:08:56.400712\n",
-      "Started processing Doc (18-19 / 55) at:- 2022-07-11 20:08:56.400726\n",
-      "Finished processing Doc (18-19 / 55) at:- 2022-07-11 20:08:56.506987\n",
-      "Started processing Doc (5-5 / 55) at:- 2022-07-11 20:08:56.507085\n",
-      "Finished processing Doc (5-5 / 55) at:- 2022-07-11 20:08:56.852263\n",
-      "Started processing Doc (32-34 / 55) at:- 2022-07-11 20:08:56.852294\n",
-      "Finished processing Doc (32-34 / 55) at:- 2022-07-11 20:08:57.040928\n",
-      "Started processing Doc (53-55 / 55) at:- 2022-07-11 20:08:57.041023\n",
-      "Finished processing Doc (53-55 / 55) at:- 2022-07-11 20:08:57.125236\n",
-      "Started processing Doc (46-48 / 55) at:- 2022-07-11 20:08:57.125254\n",
-      "Finished processing Doc (46-48 / 55) at:- 2022-07-11 20:08:57.314593\n",
-      "Started processing Doc (40-42 / 55) at:- 2022-07-11 20:08:57.314619\n",
-      "Finished processing Doc (40-42 / 55) at:- 2022-07-11 20:08:57.382476\n",
-      "Started processing Doc (38-40 / 55) at:- 2022-07-11 20:08:57.382564\n",
-      "Finished processing Doc (38-40 / 55) at:- 2022-07-11 20:08:57.436780\n",
-      "Started processing Doc (52-54 / 55) at:- 2022-07-11 20:08:57.436800\n",
-      "Finished processing Doc (52-54 / 55) at:- 2022-07-11 20:08:57.557885\n",
-      "Started processing Doc (28-30 / 55) at:- 2022-07-11 20:08:57.557901\n",
-      "Finished processing Doc (28-30 / 55) at:- 2022-07-11 20:08:58.142603\n",
-      "Started processing Doc (45-47 / 55) at:- 2022-07-11 20:08:58.142704\n",
-      "Finished processing Doc (45-47 / 55) at:- 2022-07-11 20:08:58.262378\n",
-      "Started processing Doc (19-20 / 55) at:- 2022-07-11 20:08:58.262395\n",
-      "Finished processing Doc (19-20 / 55) at:- 2022-07-11 20:08:58.355237\n",
-      "Started processing Doc (50-52 / 55) at:- 2022-07-11 20:08:58.355251\n",
-      "Finished processing Doc (50-52 / 55) at:- 2022-07-11 20:08:58.665646\n",
-      "Started processing Doc (16-17 / 55) at:- 2022-07-11 20:08:58.665739\n",
-      "Finished processing Doc (16-17 / 55) at:- 2022-07-11 20:08:58.733287\n",
-      "Started processing Doc (36-38 / 55) at:- 2022-07-11 20:08:58.733304\n",
-      "Finished processing Doc (36-38 / 55) at:- 2022-07-11 20:08:58.865629\n",
-      "Started processing Doc (25-27 / 55) at:- 2022-07-11 20:08:58.865643\n",
-      "Finished processing Doc (25-27 / 55) at:- 2022-07-11 20:08:58.923587\n",
-      "Started processing Doc (41-43 / 55) at:- 2022-07-11 20:08:58.923676\n",
-      "Finished processing Doc (41-43 / 55) at:- 2022-07-11 20:08:59.025846\n",
       "\n",
       "---\n",
-      "Finished entire run at:- 2022-07-11 20:08:59.075186\n"
+      "Finished entire run at:- 2022-07-12 08:35:51.082673\n"
      ]
     }
    ],
@@ -275,16 +175,20 @@
     "print(\"---\")\n",
     "print()\n",
     "\n",
+    "entity_dict = {}\n",
     "processed_data = {}\n",
     "for key in data:\n",
     "    ct = datetime.datetime.now()\n",
-    "    print(\"Started processing Doc (\" + str(key) + \"-\" + str(lookup_correct_docid(key)) + \" / \" + \"55) at:-\", ct)\n",
+    "    # print(\"Started processing Doc (\" + str(key) + \"-\" + str(lookup_correct_docid(key)) + \" / \" + \"55) at:-\", ct)\n",
     "    processed_data[lookup_correct_docid(key)] = process(df, data[key], lookup_correct_docid(key))\n",
     "    ct = datetime.datetime.now()\n",
-    "    print(\"Finished processing Doc (\" + str(key) + \"-\" + str(lookup_correct_docid(key)) + \" / \" + \"55) at:-\", ct)\n",
+    "    # print(\"Finished processing Doc (\" + str(key) + \"-\" + str(lookup_correct_docid(key)) + \" / \" + \"55) at:-\", ct)\n",
     "\n",
     "with open('processed_ngram_ner_data.json', 'w') as fp:\n",
     "    json.dump(processed_data, fp)\n",
+    "    \n",
+    "with open('entity_dict.json', 'w') as fp:\n",
+    "    json.dump(entity_dict, fp)\n",
     "    \n",
     "print()\n",
     "ct = datetime.datetime.now()\n",
@@ -294,8 +198,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e5e51ba6-58d1-402b-b778-4218e121227d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Declare a list that is to be converted into a column\n",
+    "single_tokens = []\n",
+    "\n",
+    "for item in df['entity'].tolist():\n",
+    "    if isinstance(item, str):\n",
+    "        named_entity_tokens = item.strip().replace('\"', '').replace(\"'\", '').replace(\",\",'').replace('’','').replace('‘','').replace('“','').replace('”','').split()\n",
+    "        if (len(named_entity_tokens) > 1):\n",
+    "            single_tokens.append(entity_dict[item])\n",
+    "        elif (len(named_entity_tokens) == 1):\n",
+    "            single_tokens.append(item)\n",
+    "        else:\n",
+    "            single_tokens.append(None)\n",
+    "    else:\n",
+    "        single_tokens.append(None)\n",
+    "                          \n",
+    "df['entity_as_single_token'] = single_tokens\n",
+    "\n",
+    "df.to_csv('full-flair-ner-list-oecd-with-single-tokens.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79035d55-2f0d-4b90-9404-a9ee60d46344",
    "metadata": {},
    "outputs": [],
    "source": []
