updates readme to describe srl/mhs.py. corrects file paths.

--- a/ner_flair.ipynb
+++ b/ner_flair.ipynb
@@ -47,11 +47,11 @@
    "outputs": [],
    "source": [
     "# get data (full texts of documents including acknowledgements, foreword, executive summary and body)\n",
-    "f = open('data.json')\n",
+    "f = open('data-files/data.json')\n",
     "data = json.load(f)\n",
     "\n",
     "# get data (the structured data which Malte processed into lines with metadata)\n",
-    "sf = open('studies_on_water_scraped.json')\n",
+    "sf = open('data-files/studies_on_water_scraped.json')\n",
     "malte_data = json.load(sf)"
    ]
   },
@@ -194,7 +194,7 @@
     "    ct = datetime.datetime.now()\n",
     "    print(\"Started processing Doc (\" + str(key) + \"-\" + str(lookup_correct_docid(key)) + \" / \" + \"55) at:-\", ct)\n",
     "    ner_results = flair_ner(data[key], flair_18class, lookup_correct_docid(key))\n",
-    "    write_results_to_file(ner_results, 'master-ner-results.csv')\n",
+    "    write_results_to_file(ner_results, 'data-files/master-ner-results.csv')\n",
     "    ct = datetime.datetime.now()\n",
     "    print(\"Finished processing Doc (\" + str(key) + \"-\" + str(lookup_correct_docid(key)) + \" / \" + \"55) at:-\", ct)\n",
     "\n",
