--- a/preprocess_ngram_named_entities.ipynb
+++ b/preprocess_ngram_named_entities.ipynb
@@ -12,7 +12,7 @@
     "import os.path\n",
     "import json\n",
     "\n",
-    "df = pd.read_csv('full-flair-ner-list-oecd-corpus.csv')"
+    "df = pd.read_csv('data-files/full-flair-ner-list-oecd-corpus.csv')"
    ]
   },
   {
@@ -23,11 +23,11 @@
    "outputs": [],
    "source": [
     "# get data (full texts of documents including acknowledgements, foreword, executive summary and body)\n",
-    "f = open('data.json')\n",
+    "f = open('data-files/data.json')\n",
     "data = json.load(f)\n",
     "\n",
     "# get data (the structured data which Malte processed into lines with metadata)\n",
-    "sf = open('studies_on_water_scraped.json')\n",
+    "sf = open('data-files/studies_on_water_scraped.json')\n",
     "malte_data = json.load(sf)"
    ]
   },
@@ -184,10 +184,10 @@
     "    ct = datetime.datetime.now()\n",
     "    # print(\"Finished processing Doc (\" + str(key) + \"-\" + str(lookup_correct_docid(key)) + \" / \" + \"55) at:-\", ct)\n",
     "\n",
-    "with open('processed_ngram_ner_data.json', 'w') as fp:\n",
+    "with open('data-files/processed_ngram_ner_data.json', 'w') as fp:\n",
     "    json.dump(processed_data, fp)\n",
     "    \n",
-    "with open('entity_dict.json', 'w') as fp:\n",
+    "with open('data-files/entity_dict.json', 'w') as fp:\n",
     "    json.dump(entity_dict, fp)\n",
     "    \n",
     "print()\n",
@@ -220,7 +220,7 @@
     "                          \n",
     "df['entity_as_single_token'] = single_tokens\n",
     "\n",
-    "df.to_csv('full-flair-ner-list-oecd-with-single-tokens.csv', index=False)"
+    "df.to_csv('data-files/full-flair-ner-list-oecd-with-single-tokens.csv', index=False)"
    ]
   },
   {
