--- a/word2vec-embeddings.ipynb
+++ b/word2vec-embeddings.ipynb
@@ -16,7 +16,7 @@
     "import json\n",
     "import string \n",
     "\n",
-    "corpus_path = datapath('/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/embeddings/processed_ngram_ner_data.json')\n",
+    "corpus_path = datapath('data-files/processed_ngram_ner_data.json')\n",
     "with open(corpus_path, encoding='utf-8') as f:\n",
     "    datajson = json.load(f)\n",
     "\n",
@@ -24,7 +24,7 @@
     "for key in datajson:\n",
     "    corpus += datajson[key] + ' '\n",
     "    \n",
-    "f = open('ngram_replacements.json')\n",
+    "f = open('data-files/ngram_replacements.json')\n",
     "ngram_replacements = json.load(f)\n",
     "        \n",
     "def replace_all(text, dic):\n",
@@ -206,14 +206,14 @@
     "import tempfile\n",
     "\n",
     "with tempfile.NamedTemporaryFile(delete=False) as tmp:\n",
-    "    filepath_200_10 = '/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/embeddings/models/gensim-oecd-word2vec-200-10.model'\n",
-    "    filepath_200_20 = '/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/embeddings/models/gensim-oecd-word2vec-200-20.model'\n",
-    "    filepath_200_30 = '/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/embeddings/models/gensim-oecd-word2vec-200-30.model'\n",
-    "    filepath_100_10 = '/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/embeddings/models/gensim-oecd-word2vec-100-10.model'\n",
-    "    filepath_100_20 = '/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/embeddings/models/gensim-oecd-word2vec-100-20.model'\n",
-    "    filepath_100_30 = '/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/embeddings/models/gensim-oecd-word2vec-100-30.model'\n",
-    "    filepath_200_40_30 = '/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/embeddings/models/gensim-oecd-word2vec-200-40-30.model'\n",
-    "    filepath_100_40_30 = '/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/embeddings/models/gensim-oecd-word2vec-100-40-30.model'\n",
+    "    filepath_200_10 = 'models/gensim-oecd-word2vec-200-10.model'\n",
+    "    filepath_200_20 = 'models/gensim-oecd-word2vec-200-20.model'\n",
+    "    filepath_200_30 = 'models/gensim-oecd-word2vec-200-30.model'\n",
+    "    filepath_100_10 = 'models/gensim-oecd-word2vec-100-10.model'\n",
+    "    filepath_100_20 = 'models/gensim-oecd-word2vec-100-20.model'\n",
+    "    filepath_100_30 = 'models/gensim-oecd-word2vec-100-30.model'\n",
+    "    filepath_200_40_30 = 'models/gensim-oecd-word2vec-200-40-30.model'\n",
+    "    filepath_100_40_30 = 'models/gensim-oecd-word2vec-100-40-30.model'\n",
     "    model_200_10.save(filepath_200_10)\n",
     "    model_200_20.save(filepath_200_20)\n",
     "    model_200_30.save(filepath_200_30)\n",
