fixes file paths

--- a/srl/oecd-srl-cleaning-and-analysis.ipynb
+++ b/srl/oecd-srl-cleaning-and-analysis.ipynb
@@ -458,7 +458,7 @@
     "    pickle.dump(new_hq_res, f)\n",
     "    \n",
     "import pickle\n",
-    "with open('data-files/srl_predictions_cleaned_pass1.pkl', 'wb') as f:\n",
+    "with open('../data-files/srl_predictions_cleaned_pass1.pkl', 'wb') as f:\n",
     "    pickle.dump(overall_res, f)"
    ]
   },
@@ -477,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1 = open('replace_stopwords_orgs.txt', 'r')\n",
+    "file1 = open('../data-files/replace_stopwords_orgs.txt', 'r')\n",
     "other_stopwords = file1.readlines()\n",
     "other_stopwords2 = []\n",
     "for item in other_stopwords:\n",
