clean up code and repo for handing over to project partners.

--- a/1 - identify organisations in the corpus/ner_flair.ipynb
+++ b/1 - identify organisations in the corpus/ner_flair.ipynb
@@ -1,9 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff096c7c-98a9-4a35-a370-0937d79f9027",
+   "cell_type": "markdown",
+   "id": "a0a6dd3e-93b1-4611-9968-c0fe26bca8b0",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -11,7 +10,43 @@
     "id": "ff096c7c-98a9-4a35-a370-0937d79f9027",
     "outputId": "d49eef11-3562-443a-c8cc-e56c398c32e2"
    },
-   "outputs": [],
+   "source": [
+    "## Named Entity Recognition (NER) \n",
+    "\n",
+    "This notebook identifies the main organisations and actors in the OECD corpus of texts. It uses the FLAIR framework for NLP with the 'ner-english-ontonotes-large' model which can be found [here](https://huggingface.co/flair/ner-english-ontonotes-large). \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7024aa60-5a59-4360-aac0-cd3f4a078e00",
+   "metadata": {},
+   "source": [
+    "### 1. Import relevant libraries and load the NER model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d5e621fa-4d0e-43e0-9566-5a7d4336bf20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/huggingface_hub/file_download.py:560: FutureWarning: `cached_download` is the legacy way to download files from the HF hub, please consider upgrading to `hf_hub_download`\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-10-20 09:47:30,602 loading file /Users/kodymoodley/.flair/models/ner-english-ontonotes-large/2da6c2cdd76e59113033adf670340bfd820f0301ae2e39204d67ba2dc276cc28.ec1bdb304b6c66111532c3b1fc6e522460ae73f1901848a4d0362cdf9760edb1\n",
+      "2022-10-20 09:47:53,919 SequenceTagger predicts: Dictionary with 76 tags: <unk>, O, B-CARDINAL, E-CARDINAL, S-PERSON, S-CARDINAL, S-PRODUCT, B-PRODUCT, I-PRODUCT, E-PRODUCT, B-WORK_OF_ART, I-WORK_OF_ART, E-WORK_OF_ART, B-PERSON, E-PERSON, S-GPE, B-DATE, I-DATE, E-DATE, S-ORDINAL, S-LANGUAGE, I-PERSON, S-EVENT, S-DATE, B-QUANTITY, E-QUANTITY, S-TIME, B-TIME, I-TIME, E-TIME, B-GPE, E-GPE, S-ORG, I-GPE, S-NORP, B-FAC, I-FAC, E-FAC, B-NORP, E-NORP, S-PERCENT, B-ORG, E-ORG, B-LANGUAGE, E-LANGUAGE, I-CARDINAL, I-ORG, S-WORK_OF_ART, I-QUANTITY, B-MONEY\n"
+     ]
+    }
+   ],
    "source": [
     "from flair.models import SequenceTagger\n",
     "from flair.data import Sentence\n",
@@ -19,7 +54,6 @@
     "import numpy as np\n",
     "import csv\n",
     "import os.path\n",
-    "import json\n",
     "\n",
     "# relevant entity types:\n",
     "# ----------------------\n",
@@ -38,98 +72,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad17d3a7-9f93-4776-8e98-4fe8fb465086",
+   "metadata": {},
+   "source": [
+    "### 2. Load the corpus of OECD texts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0cdc4deb-295f-4102-9e07-be484b90a62f",
    "metadata": {
     "id": "0cdc4deb-295f-4102-9e07-be484b90a62f"
    },
    "outputs": [],
    "source": [
+    "import json\n",
     "# get data (full texts of documents including acknowledgements, foreword, executive summary and body)\n",
-    "f = open('data-files/data.json')\n",
+    "f = open('data.json')\n",
     "data = json.load(f)\n",
     "\n",
     "# get data (the structured data which Malte processed into lines with metadata)\n",
-    "sf = open('data-files/studies_on_water_scraped.json')\n",
-    "malte_data = json.load(sf)"
+    "sf = open('studies_on_water_scraped.json')\n",
+    "raw_data = json.load(sf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9983511c-4634-499e-a09a-7ff9d64f1cb4",
+   "metadata": {},
+   "source": [
+    "### 3. Do the NER-specific preprocessing required "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "TPha0WaPLcfU",
-   "metadata": {
-    "id": "TPha0WaPLcfU"
-   },
+   "execution_count": 9,
+   "id": "2c339fe7-a177-4425-85d1-3f1fc434d39c",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "import gensim\n",
-    "from gensim.parsing.preprocessing import preprocess_string, strip_tags, strip_multiple_whitespaces\n",
+    "from preprocessing import preprocess_ner\n",
     "\n",
-    "# define preprocessing steps\n",
-    "def preprocess(text):\n",
-    "    # remove URLs\n",
-    "    text = re.sub('http://\\S+|https://\\S+', '', text)\n",
-    "    text = re.sub('http[s]?://\\S+', '', text)\n",
-    "    text = re.sub(r'http\\S+', '', text)\n",
-    "    text = re.sub('^(http:\\/\\/www\\.|https:\\/\\/www\\.|http:\\/\\/|https:\\/\\/)?[a-z0-9]+([\\-\\.]{1}[a-z0-9]+)*\\.[a-z]{2,5}(:[0-9]{1,5})?(\\/.*)?$', '', text)\n",
-    "    \n",
-    "    # remove HTML / XML-like tags in text and multiple whitespaces\n",
-    "    CUSTOM_FILTERS = [strip_tags, strip_multiple_whitespaces]\n",
-    "    text_tokens = preprocess_string(text, CUSTOM_FILTERS)\n",
-    "    \n",
-    "    # remove niche irrelevant characters\n",
-    "    irrelevant_tokens = ['et', 'al.', 'x', 'pdf', 'yes', 'abbrev','fe',\n",
-    "                            'page', 'pp', 'p', 'er', 'doi', 'can', 'b', 'c', 'd', 'e',\n",
+    "# stopwords (niche irrelevant characters)\n",
+    "irrelevant_tokens = ['et', 'al.', 'x', 'pdf', 'yes', 'abbrev','fe',\n",
+    "                            'page', 'pp', 'p', 'er', 'doi', 'b', 'c', 'd', 'e',\n",
     "                            'f', 'g', 'h', 'j', 'k', 'l', 'm', 'n', 'o', 'q', 'r', 's',\n",
     "                            't', 'u', 'v', 'w', 'y', 'z','www', 'com', 'org', 'de', 'dx', 'th', 'ii', 'le']\n",
     "\n",
-    "    tokens_without_sw = [word.strip() for word in text_tokens if not word.strip() in irrelevant_tokens]\n",
-    "    text = ' '.join(tokens_without_sw)\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7TPDXqwSLiOp",
-   "metadata": {
-    "id": "7TPDXqwSLiOp"
-   },
-   "outputs": [],
-   "source": [
     "# preprocess data\n",
     "for key in data:\n",
-    "    data[key] = preprocess(data[key])"
+    "    data[key] = preprocess_ner(data[key], irrelevant_tokens)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "-QmKcjk4MZ2h",
+   "cell_type": "markdown",
+   "id": "78b890fa-e3a4-4c6c-956d-3f8828c0c2a9",
    "metadata": {
     "id": "-QmKcjk4MZ2h"
    },
-   "outputs": [],
    "source": [
-    "# define function to lookup correct ID for document in studies_on_water_scraped.json\n",
-    "# before this, I was using the INDEX of the document in the JSON array of this file as its ID.\n",
-    "def lookup_correct_docid(old_key):\n",
-    "    global malte_data\n",
-    "    return malte_data[int(old_key)]['meta']['id']"
+    "### 4. Functions to extract the named entities in the corpus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b7647a06-b78c-45a5-91a0-5afceb3b327f",
    "metadata": {
     "id": "b7647a06-b78c-45a5-91a0-5afceb3b327f"
    },
    "outputs": [],
    "source": [
+    "# define function to lookup correct ID for document in studies_on_water_scraped.json\n",
+    "# before this, I was using the INDEX of the document in the JSON array of this file as its ID.\n",
+    "def lookup_correct_docid(old_key):\n",
+    "    global raw_data\n",
+    "    return raw_data[int(old_key)]['meta']['id']\n",
+    "\n",
     "# function to split sentence list into chunks for batch processing by GPU\n",
     "def split(list_a, chunk_size):\n",
     "    for i in range(0, len(list_a), chunk_size):\n",
@@ -170,8 +191,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13d2d66a-3dbb-49ab-850a-a880d94b9a10",
+   "metadata": {},
+   "source": [
+    "### 5. Run the NER extraction process on the corpus\n",
+    "\n",
+    "**Note:** it is highly recommended to run this analysis on a GPU for best performance. For reference, on Google Colab (free edition), using one GPU, it takes approximately 2.5 hours to process the 55 input documents in this corpus. If you are not using a GPU this can take much longer to process."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f7dfd99a-1cb8-4adb-80b3-847fd5385b4e",
    "metadata": {
     "colab": {
@@ -180,7 +211,28 @@
     "id": "f7dfd99a-1cb8-4adb-80b3-847fd5385b4e",
     "outputId": "e324561d-372b-45c0-a5d3-9fffedce8ade"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Started entire run at:- 2022-10-20 09:53:07.350106\n",
+      "---\n",
+      "\n",
+      "Started processing Doc (29-31 / 55) at:- 2022-10-20 09:53:07.350705\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# run the NER tagging on each document in the corpus\n",
     "import datetime;\n",
@@ -190,13 +242,15 @@
     "print(\"---\")\n",
     "print()\n",
     "\n",
+    "idx = 1\n",
     "for key in data:\n",
     "    ct = datetime.datetime.now()\n",
-    "    print(\"Started processing Doc (\" + str(key) + \"-\" + str(lookup_correct_docid(key)) + \" / \" + \"55) at:-\", ct)\n",
+    "    print(\"Started processing Doc (\" + idx + \" / \" + \"55) -> DOC ID: \" + str(lookup_correct_docid(key)) + \" at:-\", ct)\n",
     "    ner_results = flair_ner(data[key], flair_18class, lookup_correct_docid(key))\n",
     "    write_results_to_file(ner_results, 'data-files/master-ner-results.csv')\n",
     "    ct = datetime.datetime.now()\n",
-    "    print(\"Finished processing Doc (\" + str(key) + \"-\" + str(lookup_correct_docid(key)) + \" / \" + \"55) at:-\", ct)\n",
+    "    print(\"Finished doc at:-\", ct)\n",
+    "    idx += 1\n",
     "\n",
     "print()\n",
     "ct = datetime.datetime.now()\n",
